[package]
name = "stun_codec"
version = "0.3.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Encoders and decoders for STUN (RFC 5389) and its extensions"
homepage = "https://github.com/sile/stun_codec"
repository = "https://github.com/sile/stun_codec"
readme = "README.md"
keywords = ["STUN"]
categories = ["encoding"]
license = "MIT"
edition = "2021"

[badges]
coveralls = { repository = "sile/stun_codec" }

[dependencies]
bytecodec = "0.4"
byteorder = "1"
cfg-if = "1.0.0"
crc = "3"
hmac-sha1 = { version = "0.1", optional = true }
mbedtls = { git = "https://github.com/bshubenok-sigma/rust-mbedtls", branch = "esp_idf_5.1", default-features = false, features = ["std", "time", "async"] }
mbedtls-sys-espidf = { git = "https://github.com/bshubenok-sigma/rust-mbedtls", branch = "esp_idf_5.1" }
md5 = { version = "0.7", optional = true }
trackable = "1"

[features]
default = ["mbedtls"]
mbedtls = []
native_hash = ["hmac-sha1", "md5"]
